# wyvern

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh  quick_todo.txt  run.sh  transfer_utility.py  transfer_utility2.py
private/backend/audio/: openal_backend.cpp  openal_backend.h
private/backend/audio/openal/: openal_backend.cpp  openal_backend.h
private/backend/graphics/: vulkan_backend.cpp  vulkan_backend.h
private/backend/graphics/opengl/: gl_backend.cpp  gl_backend.h  opengl_backend.cpp  opengl_backend.h
private/backend/graphics/vulkan/: vk_backbuffer.cpp  vk_backbuffer.h  vk_backend.cpp  vk_backend.h  vk_buffer.cpp  vk_buffer.h  vk_buffer_mgr.cpp  vk_buffer_mgr.h  vk_descriptor_builder.cpp  vk_descriptor_builder.h  vk_descriptor_cache.cpp  vk_descriptor_cache.h  vk_descriptor_pool_mgr.cpp  vk_descriptor_pool_mgr.h  vk_framebuffer.cpp  vk_framebuffer.h  vk_image.cpp  vk_image.h  vk_image_view.cpp  vk_image_view.h  vk_mesh.cpp  vk_mesh.h  vk_render_pass_builder.cpp  vk_render_pass_builder.h  vk_render_target.cpp  vk_render_target.h  vk_render_target_mgr.cpp  vk_render_target_mgr.h  vk_shader.cpp  vk_shader.h  vk_shader_mgr.cpp  vk_shader_mgr.h  vk_texture.cpp  vk_texture.h  vk_texture_mgr.cpp  vk_texture_mgr.h  vk_texture_sampler.cpp  vk_texture_sampler.h  vk_ubo_manager.cpp  vk_ubo_manager.h  (+4 more)
private/backend/system/: sdl2_backend.cpp  sdl2_backend.h
private/backend/system/sdl2/: sdl2_backend.cpp  sdl2_backend.h
private/backend/system/sdl3/: sdl3_backend.cpp  sdl3_backend.h
public/wvn/: camera.cpp  camera.h  class_db.h  common.cpp  common.h  const.h  root.cpp  root.h  singleton.h  time.cpp  time.h
public/wvn/actor/: actor.cpp  actor.h  actor_handle.cpp  actor_handle.h  actor_mgr.cpp  actor_mgr.h  event.cpp  event.h  event_mgr.cpp  event_mgr.h  scene.h  scene_mgr.cpp  scene_mgr.h
public/wvn/animation/: animation_mgr.cpp  animation_mgr.h
public/wvn/audio/: audio_backend.h  audio_mgr.cpp  audio_mgr.h  sound.cpp  sound.h
public/wvn/container/: any.h  array.h  bitset.h  circular_queue.h  deque.h  function.h  hash_map.h  linked_list.h  optional.h  pair.h  queue.h  stack.h  stack_vector.h  string.h  vector.h
public/wvn/devenv/: console.cpp  console.h  log_mgr.cpp  log_mgr.h  profiler.cpp  profiler.h
public/wvn/entity/: entity.cpp  entity.h  entity_common.h  entity_handle.cpp  entity_handle.h  entity_mgr.cpp  entity_mgr.h  event.cpp  event.h  event_mgr.cpp  event_mgr.h
public/wvn/entity/base/: light_entity.h
public/wvn/graphics/: backbuffer.h  blend.h  font.cpp  font.h  gpu_buffer.cpp  gpu_buffer.h  gpu_buffer_mgr.cpp  gpu_buffer_mgr.h  image.cpp  image.h  light.cpp  light.h  material.cpp  material.h  material_system.cpp  material_system.h  mesh.cpp  mesh.h  mesh_mgr.cpp  mesh_mgr.h  model.cpp  model.h  render_pass.h  render_target.cpp  render_target.h  render_target_mgr.cpp  render_target_mgr.h  renderable_object.cpp  renderable_object.h  renderer_backend.h  rendering_backend.h  rendering_mgr.cpp  rendering_mgr.h  shader.cpp  shader.h  shader_mgr.cpp  shader_mgr.h  shader_params.h  sub_mesh.cpp  sub_mesh.h  (+10 more)
public/wvn/input/: gamepad.h  input.cpp  input.h  input_mgr.cpp  input_mgr.h  joystick.h  keyboard.h  mouse.h  v_button.cpp  v_button.h  v_key.cpp  v_key.h
public/wvn/io/: endian.cpp  endian.h  file_stream.cpp  file_stream.h  memory_stream.cpp  memory_stream.h  stream.cpp  stream.h
public/wvn/math/: calc.h  circle.cpp  circle.h  colour.cpp  colour.h  complex.cpp  complex.h  cuboid.h  ease.h  line.cpp  line.h  mat3x2.cpp  mat3x2.h  mat3x3.cpp  mat4x3.cpp  mat4x3.h  mat4x4.cpp  mat4x4.h  matrix.h  polygon.cpp  polygon.h  quad.cpp  quad.h  quaternion.cpp  random.cpp  random.h  range.h  rect.h  timer.cpp  triangle.cpp  triangle.h  vec2.h  vec3.h
public/wvn/maths/: affine_3d.cpp  affine_3d.h  basis_3d.cpp  basis_3d.h  calc.h  circle.cpp  circle.h  colour.cpp  colour.h  complex.cpp  complex.h  cuboid.h  ease.h  line.cpp  line.h  mat2x3.cpp  mat2x3.h  mat3x2.cpp  mat3x2.h  mat3x3.cpp  mat3x3.h  mat3x4.cpp  mat3x4.h  mat4x3.cpp  mat4x3.h  mat4x4.cpp  mat4x4.h  polygon.cpp  polygon.h  quad.cpp  quad.h  quat.cpp  quat.h  quaternion.cpp  quaternion.h  random.cpp  random.h  range.h  rect.h  sphere.cpp  (+9 more)
public/wvn/network/: ip_address.cpp  ip_address.h  listener.h  network_mgr.cpp  network_mgr.h  socket.h  tcp_listener.cpp  tcp_socket.cpp  udp_socket.cpp
public/wvn/physics/: agent.h  agent_registry.h  physics_mgr.cpp  physics_mgr.h  rigidbody.cpp  rigidbody.h  shape.h
public/wvn/physics/agents/: agent_sphere_sphere.h
public/wvn/physics/shapes/: shape_sphere.h
public/wvn/plugin/: plugin.h  plugin_loader.cpp  plugin_loader.h
public/wvn/plugin/audio/: openal_plugin.cpp  openal_plugin.h
public/wvn/plugin/graphics/: opengl_plugin.cpp  opengl_plugin.h  vulkan_plugin.cpp  vulkan_plugin.h
public/wvn/plugin/system/: sdl2_plugin.cpp  sdl2_plugin.h  sdl3_plugin.cpp  sdl3_plugin.h
public/wvn/resource/: resource_mgr.cpp  resource_mgr.h
public/wvn/system/: system_backend.h  system_mgr.cpp  system_mgr.h  window_mgr.cpp  window_mgr.h
public/wvn/time/: date_span.h  date_time.h  tick_span.h  tick_time.h
public/wvn/util/: assert.h  class_db.h  common.cpp  common.h  singleton.h  types.cpp  types.h
test/res/: frag.spv  fragment.hlsl  shader.frag  shader.vert  skybox_frag.frag  skybox_frag.spv  vert.spv  vertex.hlsl
test/src/: ffff.cpp  main.cpp
